Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-286

Seg fault on startup on OSX inside RecSetRawStatSum

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 2.1.0
    • 2.1.0
    • Metrics
    • None
    • All

    Description

      OS X debug (--enable-debug) build:

      Getting the following segfault about 5 seconds after startup with latest trunk:

      #0 0x00007fff88b4cfe6 in __kill ()
      #1 0x00007fff88bede32 in abort ()
      #2 0x0000000100280639 in ink_mutex_acquire (m=0x100d56368) at ink_mutex.h:96
      #3 0x0000000100280924 in raw_stat_clear_sum (rsb=0x100d56350, id=0) at RecProcess.cc:126
      #4 0x0000000100280a0c in RecSetRawStatSum (rsb=0x100d56350, id=0, data=0) at RecProcess.cc:592
      #5 0x00000001002588a3 in register_net_stats () at Net.cc:66
      #6 0x0000000100258e04 in ink_net_init (version=16842752) at Net.cc:152
      #7 0x0000000100075f9f in main (argc=1, argv=0x7fff5fbff948) at Main.cc:1896
      (gdb) fr 4
      #4 0x0000000100280a0c in RecSetRawStatSum (rsb=0x100d56350, id=0, data=0) at RecProcess.cc:592
      592 raw_stat_clear_sum(rsb, id);
      (gdb) p *rsb
      $12 = {
      ethr_stat_offset = 2920,
      global = 0x100d563b0,
      num_stats = 0,
      max_stats = 16,
      mutex =

      { __sig = 0, __opaque = '\0' <repeats 55 times> }

      }
      (gdb) fr 2
      #2 0x0000000100280639 in ink_mutex_acquire (m=0x101801448) at ink_mutex.h:96
      96 abort();
      (gdb) l
      91
      92 static inline int
      93 ink_mutex_acquire(ink_mutex * m)
      94 {
      95 if (pthread_mutex_lock(m) != 0)

      { 96 abort(); 97 }

      98 return 0;
      99 }

      Looks like the mutex for rsb is NULL.

      Attachments

        1. TS-286.patch
          0.4 kB
          Eric Balsa

        Activity

          People

            ericb Eric Balsa
            ericb Eric Balsa
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: