TS-286: initialize the mutex

git-svn-id: https://svn.apache.org/repos/asf/incubator/trafficserver/traffic/trunk@930004 13f79535-47bb-0310-9956-ffa450edef68